# wccc

./: .env  .gitignore  CLAUDE.md  WeChatAPI.py  debug_websocket.py  docker-compose.yml  init.sql  main.py  pyproject.toml
ai/: __init__.py  cert_split_prompt.md  glm_agent.py  prompt.md  test_cert_split_prompt.py  test_prompt.py  test_wechat_msg_prompt.py  wechat_msg_prompt.md
bot/: __init__.py  callback_handler.py  config.py  wechat_data_collector.py
certificate-trading/: package-lock.json  package.json
certificate-trading/app/: page.tsx
certificate-trading/app/api/certificates/: route.ts
certificate-trading/app/api/certificates/tags/: route.ts
certificate-trading/app/api/messages/: route.ts
certificate-trading/components/: CertificateList.tsx  CertificateTrading.tsx
certificate-trading/prisma/: schema.prisma
crm/: .env  README.md  docker-compose.yml
db/: __init__.py  clear_wechat_messages.sql  dao.py  database.py  models.py  query_wechat_messages.sql  raw_dao.py  raw_models.py  test_database.py
docs/: postgresql.md
tests/: test_deduplication.py
wccc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: __init__.py  data_visualization.py  run_app.py
web/sql/: certificate_match_summary.sql  certificates_query.sql  other_messages.sql  receive_messages.sql  receive_messages_with_available_certificates.sql  receive_messages_with_supply_stats.sql  send_messages.sql
wechat/: WeChatAPI.py  __init__.py  debug_websocket.py  test_get_group_list.py
