[project]
name = "wccc"
version = "0.1.0"
description = "WeChat API Client Tool"
authors = [
    { name = "andao" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["WeChatAPI", "main"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]